# tree-sitter-grammars

./: .gitignore  .gitmodules  .rustfmt.toml  .taplo.toml  Cargo.toml  Justfile  Makefile  README.md  config.toml  grammars.toml  make.py  make.sh
.github/: dependabot.yml
.github/workflows/: release.yaml
build-tree-sitter/: Cargo.toml
build-tree-sitter/src/: main.rs
helper/: Cargo.toml
helper/src/: main.rs
hit/: Cargo.toml
hit/src/: main.rs
queries/just/: tags.scm
src/: main.rs
