[package]
name    = "build-tree-sitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
cc = { version = "1.0" }
clap = { version = "4.5.1", features = [ "derive", "std", "help" ], default-features = false }
dunce = { version = "1.0.5" }
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.12" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt"] }
walkdir = { version = "2.5.0" }