[package]
name = "build-tree-sitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0"
anyhow = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap = { version = "4.3.23", features = ["derive", "std", "help"], default-features = false }
walkdir = "2.3.3"
